@@ -1,3 +1,8 @@
+Sat Jan  3 03:13:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>
+
+	* include.c: Use unixified filename when searching include paths and
+	cross compiling.
+
 Sat Jan  3 02:22:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>
 
 	* input.c: Implement environment variable substitution in objasm mode.
